# kterm

./: .gitmodules  .travis.yml  Makefile  Makefile.am  README  README.md  config.h  configure.ac  keyboard.c  keyboard.h  kindle.c  kindle.h  kterm.c  kterm.conf  parse_config.c  parse_layout.c
kindle.pkg/: config.xml  menu.json
kindle.pkg/layouts/: img  keyboard-200dpi.xml  keyboard-300dpi.xml  keyboard.xml
layouts/: keyboard-img.xml  keyboard-k200.xml  keyboard-k300.xml  keyboard-kt.xml  keyboard-wide.xml  keyboard.xml
patches/: README  matchbox-keyboard.patch
terminfo/v/: vt220
